@@ -1,0 +1,2 @@
+2004-02-18, version 0.4.7, -O3
+5.970u 0.320s 0:06.37 98.7%
